<resources>
    <string name="app_name">NoveLight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="actualitzacions">Actualitzacions</string>
    <string name="historial">Historial</string>
    <string name="explorar">Explorar</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="serie_name">Serie Name</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="publisher">Publisher</string>
    <string name="status">Status</string>
    <string name="serie_description">Serie Description</string>
    <string name="volume_count">Volume Count</string>
    <string name="release_count">Release Count</string>
    <string name="placeholder_date">01/01/0001</string>
    <string name="aquesta_aplicaci_no_recull_dades_personals_les_dades_de_la_biblioteca_es_guarden_localment_al_dispositiu_utilitzem_fonts_externes_nom_s_per_mostrar_informaci_de_novel_les">Aquesta aplicació no recull dades personals. Les dades de la biblioteca es guarden localment al dispositiu. Utilitzem fonts externes només per mostrar informació de novel·les.</string>
    <string name="pol_tica_de_privacitat">Política de privacitat</string>


    <string-array name="SyncData_Array">
        <item>Diariament</item>
        <item>Semanalment</item>
        <item>Mensualment</item>
    </string-array>
</resources>